Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,75 +56,75 @@
 <a id="html5-and-css" class="anchor" href="#html5-and-css" aria-hidden="true"><span class="octicon octicon-link"></span></a>HTML5 and CSS</h2>
 
 <ol>
-<li>Say Hello to HTML Elements</li>
-<li>Headline with the h2 Element</li>
-<li>Inform with the Paragraph Element</li>
-<li>Uncomment HTML</li>
-<li>Comment out HTML</li>
-<li>Fill in the Blank with Placeholder Text</li>
-<li>Delete HTML Elements</li>
-<li>Change the Color of Text</li>
-<li>Use CSS Selectors to Style Elements</li>
-<li>Use a CSS Class to Style an Element</li>
-<li>Style Multiple Elements with a CSS Class</li>
-<li>Change the Font Size of an Element</li>
-<li>Set the Font Family of an Element</li>
-<li>Import a Google Font</li>
-<li>Specify How Fonts Should Degrade</li>
-<li>Add Images to your Website</li>
-<li>Size your Images</li>
-<li>Add Borders Around your Elements</li>
-<li>Add Rounded Corners with a Border Radius</li>
-<li>Make Circular Images with a Border Radius</li>
-<li>Link to External Pages with Anchor Elements</li>
-<li>Nest an Anchor Element within a Paragraph</li>
-<li>Make Dead Links using the Hash Symbol</li>
-<li>Turn an Image into a Link</li>
-<li>Add Alt Text to an Image for Accessibility</li>
-<li>Create a Bulleted Unordered List</li>
-<li>Create an Ordered List</li>
-<li>Create a Text Field</li>
-<li>Add Placeholder Text to a Text Field</li>
-<li>Create a Form Element</li>
-<li>Add a Submit Button to a Form</li>
-<li>Use HTML5 to Require a Field</li>
-<li>Create a Set of Radio Buttons</li>
-<li>Create a Set of Checkboxes</li>
-<li>Check Radio Buttons and Checkboxes by Default</li>
-<li>Nest Many Elements within a Single Div Element</li>
-<li>Give a Background Color to a Div Element</li>
-<li>Set the ID of an Element</li>
-<li>Use an ID Attribute to Style an Element</li>
-<li>Adjusting the Padding of an Element</li>
-<li>Adjust the Margin of an Element</li>
-<li>Add a Negative Margin to an Element</li>
-<li>Add Different Padding to Each Side of an Element</li>
-<li>Add Different Margins to Each Side of an Element</li>
-<li>Use Clockwise Notation to Specify the Padding of an Element</li>
-<li>Use Clockwise Notation to Specify the Margin of an Element</li>
-<li>Style the HTML Body Element</li>
-<li>Inherit Styles from the Body Element</li>
-<li>Prioritize One Style Over Another</li>
-<li>Override Styles in Subsequent CSS</li>
-<li>Override Class Declarations by Styling ID Attributes</li>
-<li>Override Class Declarations with Inline Styles</li>
-<li>Override All Other Styles by using Important</li>
-<li>Use Hex Code for Specific Colors</li>
-<li>Use Hex Code to Color Elements White</li>
-<li>Use Hex Code to Color Elements Red</li>
-<li>Use Hex Code to Color Elements Green</li>
-<li>Use Hex Code to Color Elements Blue</li>
-<li>Use Hex Code to Mix Colors</li>
-<li>Use Hex Code to Color Elements Gray</li>
-<li>Use Hex Code for Specific Shades of Gray</li>
-<li>Use Abbreviated Hex Code</li>
-<li>Use RGB values to Color Elements</li>
-<li>Use RGB to Color Elements White</li>
-<li>Use RGB to Color Elements Red</li>
-<li>Use RGB to Color Elements Green</li>
-<li>Use RGB to Color Elements Blue</li>
-<li>Use RGB to Mix Colors</li>
-<li>Use RGB to Color Elements Gray</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#say-hello-to-html-elements">Say Hello to HTML Elements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#headline-with-the-h2-element">Headline with the h2 Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#inform-with-the-paragraph-element">Inform with the Paragraph Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#uncomment-html">Uncomment HTML</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#comment-out-html">Comment out HTML</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#fill-in-the-blank-with-placeholder-text">Fill in the Blank with Placeholder Text</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#delete-html-elements">Delete HTML Elements</a></li>
+<li><a href="">Change the Color of Text</a></li>
+<li><a href="">Use CSS Selectors to Style Elements</a></li>
+<li><a href="">Use a CSS Class to Style an Element</a></li>
+<li><a href="">Style Multiple Elements with a CSS Class</a></li>
+<li><a href="">Change the Font Size of an Element</a></li>
+<li><a href="">Set the Font Family of an Element</a></li>
+<li><a href="">Import a Google Font</a></li>
+<li><a href="">Specify How Fonts Should Degrade</a></li>
+<li><a href="">Add Images to your Website</a></li>
+<li><a href="">Size your Images</a></li>
+<li><a href="">Add Borders Around your Elements</a></li>
+<li><a href="">Add Rounded Corners with a Border Radius</a></li>
+<li><a href="">Make Circular Images with a Border Radius</a></li>
+<li><a href="">Link to External Pages with Anchor Elements</a></li>
+<li><a href="">Nest an Anchor Element within a Paragraph</a></li>
+<li><a href="">Make Dead Links using the Hash Symbol</a></li>
+<li><a href="">Turn an Image into a Link</a></li>
+<li><a href="">Add Alt Text to an Image for Accessibility</a></li>
+<li><a href="">Create a Bulleted Unordered List</a></li>
+<li><a href="">Create an Ordered List</a></li>
+<li><a href="">Create a Text Field</a></li>
+<li><a href="">Add Placeholder Text to a Text Field</a></li>
+<li><a href="">Create a Form Element</a></li>
+<li><a href="">Add a Submit Button to a Form</a></li>
+<li><a href="">Use HTML5 to Require a Field</a></li>
+<li><a href="">Create a Set of Radio Buttons</a></li>
+<li><a href="">Create a Set of Checkboxes</a></li>
+<li><a href="">Check Radio Buttons and Checkboxes by Default</a></li>
+<li><a href="">Nest Many Elements within a Single Div Element</a></li>
+<li><a href="">Give a Background Color to a Div Element</a></li>
+<li><a href="">Set the ID of an Element</a></li>
+<li><a href="">Use an ID Attribute to Style an Element</a></li>
+<li><a href="">Adjusting the Padding of an Element</a></li>
+<li><a href="">Adjust the Margin of an Element</a></li>
+<li><a href="">Add a Negative Margin to an Element</a></li>
+<li><a href="">Add Different Padding to Each Side of an Element</a></li>
+<li><a href="">Add Different Margins to Each Side of an Element</a></li>
+<li><a href="">Use Clockwise Notation to Specify the Padding of an Element</a></li>
+<li><a href="">Use Clockwise Notation to Specify the Margin of an Element</a></li>
+<li><a href="">Style the HTML Body Element</a></li>
+<li><a href="">Inherit Styles from the Body Element</a></li>
+<li><a href="">Prioritize One Style Over Another</a></li>
+<li><a href="">Override Styles in Subsequent CSS</a></li>
+<li><a href="">Override Class Declarations by Styling ID Attributes</a></li>
+<li><a href="">Override Class Declarations with Inline Styles</a></li>
+<li><a href="">Override All Other Styles by using Important</a></li>
+<li><a href="">Use Hex Code for Specific Colors</a></li>
+<li><a href="">Use Hex Code to Color Elements White</a></li>
+<li><a href="">Use Hex Code to Color Elements Red</a></li>
+<li><a href="">Use Hex Code to Color Elements Green</a></li>
+<li><a href="">Use Hex Code to Color Elements Blue</a></li>
+<li><a href="">Use Hex Code to Mix Colors</a></li>
+<li><a href="">Use Hex Code to Color Elements Gray</a></li>
+<li><a href="">Use Hex Code for Specific Shades of Gray</a></li>
+<li><a href="">Use Abbreviated Hex Code</a></li>
+<li><a href="">Use RGB values to Color Elements</a></li>
+<li><a href="">Use RGB to Color Elements White</a></li>
+<li><a href="">Use RGB to Color Elements Red</a></li>
+<li><a href="">Use RGB to Color Elements Green</a></li>
+<li><a href="">Use RGB to Color Elements Blue</a></li>
+<li><a href="">Use RGB to Mix Colors</a></li>
+<li><a href="">Use RGB to Color Elements Gray</a></li>
 </ol>
 
 <h2>
