Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-  <title>My-freecodecamp-code</title>
-  <meta name="description" content="My code from the bootcamp.">
+    <title>My-freecodecamp-code by Rafase282</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
     <header>
-      <h1 class="title">My-freecodecamp-code</h1>
+      <div class="container">
+        <h1>My-freecodecamp-code</h1>
+        <h2>My code from the bootcamp.</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
     </header>
-    <div id="container">
-      <p class="tagline">My code from the bootcamp.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="code">View My-freecodecamp-code on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+
+    <div class="container">
+      <section id="main_content">
+        <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h1>
 
 <p>This repository is not for an app but more as a journal where I keep a record of everything I have done and learned from FreeCodeCamp. I decided to use a wiki as I can put more information easily on it. You will find my code there and also on the right directories if you just want to see the code.</p>
@@ -63,68 +55,68 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#comment-out-html">Comment out HTML</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#fill-in-the-blank-with-placeholder-text">Fill in the Blank with Placeholder Text</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#delete-html-elements">Delete HTML Elements</a></li>
-<li><a href="">Change the Color of Text</a></li>
-<li><a href="">Use CSS Selectors to Style Elements</a></li>
-<li><a href="">Use a CSS Class to Style an Element</a></li>
-<li><a href="">Style Multiple Elements with a CSS Class</a></li>
-<li><a href="">Change the Font Size of an Element</a></li>
-<li><a href="">Set the Font Family of an Element</a></li>
-<li><a href="">Import a Google Font</a></li>
-<li><a href="">Specify How Fonts Should Degrade</a></li>
-<li><a href="">Add Images to your Website</a></li>
-<li><a href="">Size your Images</a></li>
-<li><a href="">Add Borders Around your Elements</a></li>
-<li><a href="">Add Rounded Corners with a Border Radius</a></li>
-<li><a href="">Make Circular Images with a Border Radius</a></li>
-<li><a href="">Link to External Pages with Anchor Elements</a></li>
-<li><a href="">Nest an Anchor Element within a Paragraph</a></li>
-<li><a href="">Make Dead Links using the Hash Symbol</a></li>
-<li><a href="">Turn an Image into a Link</a></li>
-<li><a href="">Add Alt Text to an Image for Accessibility</a></li>
-<li><a href="">Create a Bulleted Unordered List</a></li>
-<li><a href="">Create an Ordered List</a></li>
-<li><a href="">Create a Text Field</a></li>
-<li><a href="">Add Placeholder Text to a Text Field</a></li>
-<li><a href="">Create a Form Element</a></li>
-<li><a href="">Add a Submit Button to a Form</a></li>
-<li><a href="">Use HTML5 to Require a Field</a></li>
-<li><a href="">Create a Set of Radio Buttons</a></li>
-<li><a href="">Create a Set of Checkboxes</a></li>
-<li><a href="">Check Radio Buttons and Checkboxes by Default</a></li>
-<li><a href="">Nest Many Elements within a Single Div Element</a></li>
-<li><a href="">Give a Background Color to a Div Element</a></li>
-<li><a href="">Set the ID of an Element</a></li>
-<li><a href="">Use an ID Attribute to Style an Element</a></li>
-<li><a href="">Adjusting the Padding of an Element</a></li>
-<li><a href="">Adjust the Margin of an Element</a></li>
-<li><a href="">Add a Negative Margin to an Element</a></li>
-<li><a href="">Add Different Padding to Each Side of an Element</a></li>
-<li><a href="">Add Different Margins to Each Side of an Element</a></li>
-<li><a href="">Use Clockwise Notation to Specify the Padding of an Element</a></li>
-<li><a href="">Use Clockwise Notation to Specify the Margin of an Element</a></li>
-<li><a href="">Style the HTML Body Element</a></li>
-<li><a href="">Inherit Styles from the Body Element</a></li>
-<li><a href="">Prioritize One Style Over Another</a></li>
-<li><a href="">Override Styles in Subsequent CSS</a></li>
-<li><a href="">Override Class Declarations by Styling ID Attributes</a></li>
-<li><a href="">Override Class Declarations with Inline Styles</a></li>
-<li><a href="">Override All Other Styles by using Important</a></li>
-<li><a href="">Use Hex Code for Specific Colors</a></li>
-<li><a href="">Use Hex Code to Color Elements White</a></li>
-<li><a href="">Use Hex Code to Color Elements Red</a></li>
-<li><a href="">Use Hex Code to Color Elements Green</a></li>
-<li><a href="">Use Hex Code to Color Elements Blue</a></li>
-<li><a href="">Use Hex Code to Mix Colors</a></li>
-<li><a href="">Use Hex Code to Color Elements Gray</a></li>
-<li><a href="">Use Hex Code for Specific Shades of Gray</a></li>
-<li><a href="">Use Abbreviated Hex Code</a></li>
-<li><a href="">Use RGB values to Color Elements</a></li>
-<li><a href="">Use RGB to Color Elements White</a></li>
-<li><a href="">Use RGB to Color Elements Red</a></li>
-<li><a href="">Use RGB to Color Elements Green</a></li>
-<li><a href="">Use RGB to Color Elements Blue</a></li>
-<li><a href="">Use RGB to Mix Colors</a></li>
-<li><a href="">Use RGB to Color Elements Gray</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#change-the-color-of-text">Change the Color of Text</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-css-selectors-to-style-elements">Use CSS Selectors to Style Elements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-a-css-class-to-style-an-element">Use a CSS Class to Style an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#style-multiple-elements-with-a-css-class">Style Multiple Elements with a CSS Class</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#change-the-font-size-of-an-element">Change the Font Size of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#set-the-font-family-of-an-element">Set the Font Family of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#import-a-google-font">Import a Google Font</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#specify-how-fonts-should-degrade">Specify How Fonts Should Degrade</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-images-to-your-website">Add Images to your Website</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#size-your-images">Size your Images</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-borders-around-your-elements">Add Borders Around your Elements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-rounded-corners-with-a-border-radius">Add Rounded Corners with a Border Radius</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#make-circular-images-with-a-border-radius">Make Circular Images with a Border Radius</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#link-to-external-pages-with-anchor-elements">Link to External Pages with Anchor Elements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#nest-an-anchor-element-within-a-paragraph">Nest an Anchor Element within a Paragraph</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#make-dead-links-using-the-hash-symbol">Make Dead Links using the Hash Symbol</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#turn-an-image-into-a-link">Turn an Image into a Link</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-alt-text-to-an-image-for-accessibility">Add Alt Text to an Image for Accessibility</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#create-a-bulleted-unordered-list">Create a Bulleted Unordered List</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#create-an-ordered-list">Create an Ordered List</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#create-a-text-field">Create a Text Field</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-placeholder-text-to-a-text-field">Add Placeholder Text to a Text Field</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#create-a-form-element">Create a Form Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-a-submit-button-to-a-form">Add a Submit Button to a Form</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-html5-to-require-a-field">Use HTML5 to Require a Field</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#create-a-set-of-radio-buttons">Create a Set of Radio Buttons</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#create-a-set-of-checkboxes">Create a Set of Checkboxes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#check-radio-buttons-and-checkboxes-by-default">Check Radio Buttons and Checkboxes by Default</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#nest-many-elements-within-a-single-div-element">Nest Many Elements within a Single Div Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#give-a-background-color-to-a-div-element">Give a Background Color to a Div Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#set-the-id-of-an-element">Set the ID of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-an-id-attribute-to-style-an-element">Use an ID Attribute to Style an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#adjusting-the-padding-of-an-element">Adjusting the Padding of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#adjust-the-margin-of-an-element">Adjust the Margin of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-a-negative-margin-to-an-element">Add a Negative Margin to an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-different-padding-to-each-side-of-an-element">Add Different Padding to Each Side of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#add-different-margins-to-each-side-of-an-element">Add Different Margins to Each Side of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-clockwise-notation-to-specify-the-padding-of-an-element">Use Clockwise Notation to Specify the Padding of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-clockwise-notation-to-specify-the-margin-of-an-element">Use Clockwise Notation to Specify the Margin of an Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#style-the-html-body-element">Style the HTML Body Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#inherit-styles-from-the-body-element">Inherit Styles from the Body Element</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#prioritize-one-style-over-another">Prioritize One Style Over Another</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#override-styles-in-subsequent-css">Override Styles in Subsequent CSS</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#override-class-declarations-by-styling-id-attributes">Override Class Declarations by Styling ID Attributes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#override-class-declarations-with-inline-styles">Override Class Declarations with Inline Styles</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#override-all-other-styles-by-using-important">Override All Other Styles by using Important</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-hex-code-for-specific-colors">Use Hex Code for Specific Colors</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-hex-code-to-color-elements-white">Use Hex Code to Color Elements White</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-hex-code-to-color-elements-red">Use Hex Code to Color Elements Red</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-hex-code-to-color-elements-green">Use Hex Code to Color Elements Green</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-hex-code-to-color-elements-blue">Use Hex Code to Color Elements Blue</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-hex-code-to-mix-colors">Use Hex Code to Mix Colors</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-hex-code-to-color-elements-gray">Use Hex Code to Color Elements Gray</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-hex-code-for-specific-shades-of-gray">Use Hex Code for Specific Shades of Gray</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-abbreviated-hex-code">Use Abbreviated Hex Code</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-rgb-values-to-color-elements">Use RGB values to Color Elements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-rgb-to-color-elements-white">Use RGB to Color Elements White</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-rgb-to-color-elements-red">Use RGB to Color Elements Red</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-rgb-to-color-elements-green">Use RGB to Color Elements Green</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-rgb-to-color-elements-blue">Use RGB to Color Elements Blue</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-rgb-to-mix-colors">Use RGB to Mix Colors</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/HTML-&amp;-CSS#use-rgb-to-color-elements-gray">Use RGB to Color Elements Gray</a></li>
 </ol>
 
 <h2>
@@ -400,27 +392,10 @@
 <li>Manage a Book Trading Club</li>
 <li>Build a Pinterest Clone</li>
 </ol>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/Rafase282" class="avatar"><img src="https://avatars0.githubusercontent.com/u/285138?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Rafase282">Rafase282</a> maintains <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">My-freecodecamp-code</a></p>
 
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="tar">tar</a><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-            <script type="text/javascript">
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -431,5 +406,5 @@
             } catch(err) {}
           </script>
 
-</body>
+  </body>
 </html>
