Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -123,60 +123,60 @@
 <a id="responsive-design-with-bootstrap" class="anchor" href="#responsive-design-with-bootstrap" aria-hidden="true"><span class="octicon octicon-link"></span></a>Responsive Design with Bootstrap</h2>
 
 <ol>
-<li>Use Responsive Design with Bootstrap Fluid Containers</li>
-<li>Make Images Mobile Responsive</li>
-<li>Center Text with Bootstrap</li>
-<li>Create a Bootstrap Button</li>
-<li>Create a Block Element Bootstrap Button</li>
-<li>Taste the Bootstrap Button Color Rainbow</li>
-<li>Call out Optional Actions with Button Info</li>
-<li>Warn your Users of a Dangerous Action</li>
-<li>Use the Bootstrap Grid to Put Elements Side By Side</li>
-<li>Ditch Custom CSS for Bootstrap</li>
-<li>Use Spans for Inline Elements</li>
-<li>Create a Custom Heading</li>
-<li>Add Font Awesome Icons to our Buttons</li>
-<li>Add Font Awesome Icons to all of our Buttons</li>
-<li>Responsively Style Radio Buttons</li>
-<li>Responsively Style Checkboxes</li>
-<li>Style Text Inputs as Form Controls</li>
-<li>Line up Form Elements Responsively with Bootstrap</li>
-<li>Create a Bootstrap Headline</li>
-<li>House our page within a Bootstrap Container Fluid Div</li>
-<li>Create a Bootstrap Row</li>
-<li>Split your Bootstrap Row</li>
-<li>Create Bootstrap Wells</li>
-<li>Add Elements within your Bootstrap Wells</li>
-<li>Apply the Default Bootstrap Button Style</li>
-<li>Create a Class to Target with jQuery Selectors</li>
-<li>Add ID Attributes to Bootstrap Elements</li>
-<li>Label Bootstrap Wells</li>
-<li>Give Each Element a Unique ID</li>
-<li>Label Bootstrap Buttons</li>
-<li>Use Comments to Clarify Code</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#use-responsive-design-with-bootstrap-fluid-containers">Use Responsive Design with Bootstrap Fluid Containers</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#make-images-mobile-responsive">Make Images Mobile Responsive</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#center-text-with-bootstrap">Center Text with Bootstrap</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#create-a-bootstrap-button">Create a Bootstrap Button</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#create-a-block-element-bootstrap-button">Create a Block Element Bootstrap Button</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#taste-the-bootstrap-button-color-rainbow">Taste the Bootstrap Button Color Rainbow</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#call-out-optional-actions-with-button-info">Call out Optional Actions with Button Info</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#warn-your-users-of-a-dangerous-action">Warn your Users of a Dangerous Action</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#warn-your-users-of-a-dangerous-action">Use the Bootstrap Grid to Put Elements Side By Side</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#ditch-custom-css-for-bootstrap">Ditch Custom CSS for Bootstrap</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#use-spans-for-inline-elements">Use Spans for Inline Elements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#create-a-custom-heading">Create a Custom Heading</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#add-font-awesome-icons-to-our-buttons">Add Font Awesome Icons to our Buttons</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#add-font-awesome-icons-to-all-of-our-buttons">Add Font Awesome Icons to all of our Buttons</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#responsively-style-radio-buttons">Responsively Style Radio Buttons</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#responsively-style-checkboxes">Responsively Style Checkboxes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#style-text-inputs-as-form-controls">Style Text Inputs as Form Controls</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#line-up-form-elements-responsively-with-bootstrap">Line up Form Elements Responsively with Bootstrap</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#create-a-bootstrap-headline">Create a Bootstrap Headline</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#house-our-page-within-a-bootstrap-container-fluid-div">House our page within a Bootstrap Container Fluid Div</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#create-a-bootstrap-row">Create a Bootstrap Row</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#split-your-bootstrap-row">Split your Bootstrap Row</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#create-bootstrap-wells">Create Bootstrap Wells</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#add-elements-within-your-bootstrap-wells">Add Elements within your Bootstrap Wells</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#apply-the-default-bootstrap-button-style">Apply the Default Bootstrap Button Style</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#create-a-class-to-target-with-jquery-selectors">Create a Class to Target with jQuery Selectors</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#add-elements-within-your-bootstrap-wells">Add ID Attributes to Bootstrap Elements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#label-bootstrap-wells">Label Bootstrap Wells</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#give-each-element-a-unique-id">Give Each Element a Unique ID</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#label-bootstrap-buttons">Label Bootstrap Buttons</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Responsive-Design-with-Bootstrap#use-comments-to-clarify-code">Use Comments to Clarify Code</a></li>
 </ol>
 
 <h2>
 <a id="jquery" class="anchor" href="#jquery" aria-hidden="true"><span class="octicon octicon-link"></span></a>jQuery</h2>
 
 <ol>
-<li>Learn how Script Tags and Document Ready Work</li>
-<li>Target HTML Elements with Selectors Using jQuery</li>
-<li>Target Elements by Class Using jQuery</li>
-<li>Target Elements by ID Using jQuery</li>
-<li>Delete your jQuery Functions</li>
-<li>Target the same element with multiple jQuery Selectors</li>
-<li>Remove Classes from an element with jQuery</li>
-<li>Change the CSS of an Element Using jQuery</li>
-<li>Disable an Element Using jQuery</li>
-<li>Remove an Element Using jQuery</li>
-<li>Use appendTo to Move Elements with jQuery</li>
-<li>Clone an Element Using jQuery</li>
-<li>Target the Parent of an Element Using jQuery</li>
-<li>Target the Children of an Element Using jQuery</li>
-<li>Target a Specific Child of an Element Using jQuery</li>
-<li>Target Even Numbered Elements Using jQuery</li>
-<li>Use jQuery to Modify the Entire Page</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#learn-how-script-tags-and-document-ready-work">Learn how Script Tags and Document Ready Work</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#target-html-elements-with-selectors-using-jquery">Target HTML Elements with Selectors Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#target-elements-by-class-using-jquery">Target Elements by Class Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#target-elements-by-id-using-jquery">Target Elements by ID Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#delete-your-jquery-functions">Delete your jQuery Functions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#target-the-same-element-with-multiple-jquery-selectors">Target the same element with multiple jQuery Selectors</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#remove-classes-from-an-element-with-jquery">Remove Classes from an element with jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#change-the-css-of-an-element-using-jquery">Change the CSS of an Element Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#disable-an-element-using-jquery">Disable an Element Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#remove-an-element-using-jquery">Remove an Element Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#use-appendto-to-move-elements-with-jquery">Use appendTo to Move Elements with jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#clone-an-element-using-jquery">Clone an Element Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#target-the-parent-of-an-element-using-jquery">Target the Parent of an Element Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#target-the-children-of-an-element-using-jquery">Target the Children of an Element Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#target-a-specific-child-of-an-element-using-jquery">Target a Specific Child of an Element Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#target-even-numbered-elements-using-jquery">Target Even Numbered Elements Using jQuery</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/jQuery#use-jquery-to-modify-the-entire-page">Use jQuery to Modify the Entire Page</a></li>
 </ol>
 
 <h2>
